--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/660e68b782.js" crossorigin="anonymous"></script>
 
     <!-- tailwind custom css -->
     <script>
@@ -32,12 +34,156 @@
     </style>
 </head>
 <body class="font-manrope">
-    <header>
-
+    <header class="container mx-auto">
+        <!-- good tea time start -->
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row">
+                <div>
+                    <h1 class="text-7xl font-extrabold">
+                    It's good <br>
+                    tea time at The <br>
+                    Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                    <button class="py-4 px-9 bg-gradient-to-r from-[#FF8938] to-[#F00] rounded-xl text-white font-medium flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none" class="w-6 h-6"><path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                    Explore More</button>
+                </div>
+                <div class="relative">
+                    <img src="/images/banner.png" class="" />
+                    <div class="absolute bottom-0 left-20 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
+                        <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                        <div>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
-    <main>
 
+    <main class="container mx-auto">
+
+        <!-- featured section -->
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mx-auto pb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <!-- card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- first card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-1.png" alt="tea" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-1xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+                <!-- Second card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-2.png" alt="tea" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-1xl font-extrabold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+                <!-- Third card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-3.png" alt="tea" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-1xl font-extrabold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+                <!-- first card -->
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="/images/tea-4.png" alt="tea" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-1xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- great tea section -->
+        <section class="my-24 flex flex-col lg:flex-row gap-12">
+            <div class="grid gap-8 gril-cols-1 lg:grid-cols-2 flex-1">
+                <div class="rounded-xl h-36 opacity-10 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
+                <div class="row-span-2 bg-[#E6A6231A] py-6 rounded-lg flex justify-center items-center">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2 bg-[#574C271A] py-6 rounded-lg flex justify-center items-center">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
+            </div>
+            <div class="space-y-4 flex-1">
+                <h3 class="text-5xl font-extrabold">Great Tea, <br> Freshly Presented</h3>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the
+                highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers because
+                of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h3 class="text-xl font-extrabold mt-6">Unique Taste</h3>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h3 class="text-xl font-extrabold mt-6">Premium Quality</h3>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+
+        <!-- super client section -->
+        <section class="my-24 flex flex-col lg:flex-row bg-gradient-to-r from-[#FF8938] to-[#F00] rounded-xl gap-12 px-4 py-8 lg:px-16 lg:py-24">
+            <div class="flex lg:pr-44 items-center">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our Super <br> Clients
+                    </h2>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour, or randomised words which don't look even slightly believable.</p>
+                    <button class="btn btn-active bg-white">Show All</button>
+                </div>
+            </div>
+
+            <!-- review container -->
+            <div class="relative">
+                <!--next review -->
+                <div class="relative z-10 opacity-40 mb-16 p-10 lg:w-[430px] rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!--current review -->
+                <div class="absolute z-20 top-40 lg:-left-32 lg:w-[430px] p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!-- preview -->
+                <div class="relative z-10 opacity-40 mt-12 p-10 lg:w-[430px] rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer>
 
     </footer>
