--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -36,20 +37,21 @@
 <body class="font-manrope">
     <header class="container mx-auto">
         <!-- good tea time start -->
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
-                <div>
+        <div class="my-24">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
+                <div class="">
                     <h1 class="text-7xl font-extrabold">
                     It's good <br>
                     tea time at The <br>
                     Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-                    <button class="py-4 px-9 bg-gradient-to-r from-[#FF8938] to-[#F00] rounded-xl text-white font-medium flex">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none" class="w-6 h-6"><path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                    Explore More</button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">
+                        Explore More
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                    </button>
                 </div>
                 <div class="relative">
-                    <img src="/images/banner.png" class="" />
+                    <img src="images/banner.png" class="" />
                     <div class="absolute bottom-0 left-20 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
                         <div>
@@ -71,8 +73,8 @@
             <!-- card container -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- first card -->
-                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-1.png" alt="tea" /></figure>
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl items-center">
+                    <div><img src="images/tea-1.png" alt="tea" /></div>
                     <div class="card-body text-center">
                         <h2 class="text-1xl font-extrabold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -80,8 +82,8 @@
                 </div>
 
                 <!-- Second card -->
-                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-2.png" alt="tea" /></figure>
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl items-center">
+                    <div><img src="images/tea-2.png" alt="tea" /></div>
                     <div class="card-body text-center">
                         <h2 class="text-1xl font-extrabold">Black Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -89,8 +91,8 @@
                 </div>
 
                 <!-- Third card -->
-                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-3.png" alt="tea" /></figure>
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl items-center">
+                    <div><img src="images/tea-3.png" alt="tea" /></div>
                     <div class="card-body text-center">
                         <h2 class="text-1xl font-extrabold">Lemon Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -98,8 +100,8 @@
                 </div>
 
                 <!-- first card -->
-                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-4.png" alt="tea" /></figure>
+                <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl items-center">
+                    <div><img src="images/tea-4.png" alt="tea" /></div>
                     <div class="card-body text-center">
                         <h2 class="text-1xl font-extrabold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -116,7 +118,7 @@
                     <img src="images/fresh-1.png" alt="">
                 </div>
                 <div class="row-span-2 bg-[#574C271A] py-6 rounded-lg flex justify-center items-center">
-                    <img src="images/fresh-1.png" alt="">
+                    <img src="images/fresh-2.png" alt="">
                 </div>
                 <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
             </div>
@@ -182,10 +184,104 @@
                 </div>
             </div>
         </section>
+
+        <!-- card section -->
+        <section class="my-24 text-center">
+            <h3 class="text-[45px] font-extrabold mb-5 text-[#1C1C1C]">News & Events</h3>
+            <p class="mx-auto max-w-[901px] font-medium mb-[30px] text-[#777]">There are many variations of passages of
+                Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <!-- news card container  -->
+            <div class="flex flex-col lg:flex-row gap-1 justify-between mt-[50px]">
+                <!-- news card one -->
+                <div class="card w-[364px] border-[1px] border-[#D2D2D2]">
+                    <div class="px-[22px] pt-[21px]">
+                        <img src="images/news-1.png" alt="" class="rounded-[10px]" />
+                    </div>
+                    <div class="text-left pl-8 py-5">
+                        <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="max-w-[225px] text-xl font-extrabold text-[#1C1C1C] my-[10px]">Collecting 8 points
+                            for discount</h2>
+                        <p class="max-w-[310px] mb-[10px] font-medium text-[#777]">There are many variations of passages
+                            of Lorem Ipsum available.</p>
+                        <button class="text-[#1C1C1C] font-bold">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- news card two -->
+                <div class="card w-[364px] border-[1px] border-[#D2D2D2]">
+                    <div class="px-[22px] pt-[21px]">
+                        <img src="images/news-2.png" alt="" class="rounded-[10px]" />
+                    </div>
+                    <div class="text-left pl-8 py-5">
+                        <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="max-w-[225px] text-xl font-extrabold text-[#1C1C1C] my-[10px]">Collecting 8 points
+                            for discount</h2>
+                        <p class="max-w-[310px] mb-[10px] font-medium text-[#777]">There are many variations of passages
+                            of Lorem Ipsum available.</p>
+                        <button class="text-[#1C1C1C] font-bold">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- news card three -->
+                <div class="card w-[364px] border-[1px] border-[#D2D2D2]">
+                    <div class="px-[22px] pt-[21px]">
+                        <img src="images/news-3.png" alt="" class="rounded-[10px]" />
+                    </div>
+                    <div class="text-left pl-8 py-5">
+                        <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="max-w-[225px] text-xl font-extrabold text-[#1C1C1C] my-[10px]">Collecting 8 points
+                            for discount</h2>
+                        <p class="max-w-[310px] mb-[10px] font-medium text-[#777]">There are many variations of passages
+                            of Lorem Ipsum available.</p>
+                        <button class="text-[#1C1C1C] font-bold">Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="p-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get started?</span>
+                <button class="btn text-xl font-bold text-white bg-gradient-to-r from-[#ff8938] to-[#f00] ml-10">Get Started</button>
+            </p>
+        </div>
+        <div class="footer flex flex-col lg:flex-row lg:justify-between">
+            <div>
+                <header class="text-[#1C1C1C] text-xl font-semibold">Quick Links</header>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Insurance</a>
+                <a class="link link-hover">Privacy Policy</a>
+            </div>
+            <div>
+                 <header class="text-[#1C1C1C] text-xl font-semibold">Our Sevice</header>
+                <a class="link link-hover">Life Insurance</a>
+                <a class="link link-hover">Car Insurance</a>
+                <a class="link link-hover">Health Insurance</a>
+                <a class="link link-hover">House Insurance</a>
+            </div>
+            <div>
+                <header class="text-[#1C1C1C] text-xl font-semibold">Help</header>
+                <a class="link link-hover">FAQs</a>
+                <a class="link link-hover">Contact Us</a>
+            </div>
+            <form>
+                <header class="text-[#1C1C1C] text-2xl font-semibold w-52">Subscribe to our newsletter</header>
+                <fieldset class="form-control w-80">
+                    <div class="flex gap">
+                        <input type="text" placeholder="Email address" class="border-b-[1px] placeholder:text-sm w-[273px] bg-transparent border-[#494949]" />
+                        <button class="btn rounded-full text-white bg-gradient-to-r from-[#ff8938] to-[#f00] join-item"><i class="fa-solid fa-chevron-right w-4 h-4"></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div>
+            <p class="mt-10 text-center">Copyright © 2024 - All right reserved by Tea House Ltd</p>
+        </div>
     </footer>
 </body>
 </html>
